# MRKT-scalping-

./: .env.example  .gitignore  README.md  __main__.py  accounts.yaml.example  app.py  bus.py  pyproject.toml  requirements.txt
bootstrap/: accounts.py  logging.py  settings.py
domain/: events.py  models.py  money.py
integrations/: portals.py  telegram.py
pool/: account.py  pool.py
scanners/: gap.py  price_impact.py
services/: activities.py  collections.py  feed.py  offers.py  orders.py  trading.py  wallet.py
state/: balance.py  inventory.py  offers_book.py  orders_book.py
strategies/: decline_offers.py  feed_sniper.py  offers.py  orders.py
transport/: client.py  errors.py  rate_limit.py  urls.py
