[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mrkt-bot"
version = "2.0.0"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=2.25,<3.0",
    "curl-cffi>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "tenacity>=8.2",
]

[project.scripts]
mrkt-bot = "mrkt_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mrkt_bot*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "T20"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
